--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,17 @@ a:hover {
     width: 20%
 }
 
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    width: 80px;
+    background: transparent;
+    font-weight: bold;
+    cursor: pointer;
+    background-color: red;
+}
+
 /*LFSR*/
 #GoToLFSR {
     position: relative;
