--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,6 @@ a:hover {
     bottom: 10%;
 }
 
-
 .LFSRPopUp{
     position: absolute;
     width: 400px;
@@ -164,6 +163,43 @@ a:hover {
     width:200px;
     height: 175px;
     left: 45%;
+    top: 20%;
+}
+
+/*quiz*/
+#GoToQuiz {
+    position: relative;
+    width: 100px;
+    height: 50px;
+    bottom: 10%;
+}
+
+.QuizPopUp{
+    position: absolute;
+    width: 400px;
+    background-color: white;
+    border-radius: 6px;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0.1);
+    text-align: center;
+    padding: 0 30px 30px;
+    visibility: hidden;
+    transition: transform 0.4s, top 0.4s;
+}
+
+.open-QuizPopUp{
+    visibility: visible;
+    top: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    z-index: 1;
+}
+
+.QuizButton{
+    position: absolute;
+    width:200px;
+    height: 175px;
+    left: 70%;
     top: 20%;
 }
 
@@ -309,6 +345,32 @@ p {
 /* Hide Elements */
 .hidden {
     display: none;
+}
+
+/*Quiz*/
+
+.quiz-container { 
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    width: 500px;
+    transform: translateX(-50%);
+    text-align: center;
+    background: white;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.options button {
+    display: block;
+    margin: 10px 0;
+    padding: 10px;
+    width: 100%;
+  }
+
+.question { 
+    font-weight: bold; 
 }
 
 /* Mobile Responsive Design */
